--- a/pedidos/templates/pedidos/dashboard.html
+++ b/pedidos/templates/pedidos/dashboard.html
@@ -136,7 +136,7 @@
 </style>
 
 
-// Líneas para que VSCode no tire error ante la mezcla de sintáxis
+<!-- Líneas para que VSCode no tire error ante la mezcla de sintáxis --> 
 
 {{ stats_personal.formatos.labels|json_script:"data-personal-formatos-labels" }}
 {{ stats_personal.formatos.data|json_script:"data-personal-formatos-data" }}
