--- a/scraper/templates/scraper/scraper_jeds.html
+++ b/scraper/templates/scraper/scraper_jeds.html
@@ -1,8 +1,10 @@
 {% extends 'base.html' %}
+{% load static %}
 
 {% block title %}Scraping Jedbangers{% endblock %}
 
 {% block content %}
+
 <div style="max-width: 800px; margin: 40px auto; padding: 20px;">
     
     <h1 style="text-align: center; color: var(--color-navbar);">💿 Buscador de Discos</h1>
