--- a/scraper/templates/scraper/scraper_libros.html
+++ b/scraper/templates/scraper/scraper_libros.html
@@ -1,8 +1,10 @@
 {% extends 'base.html' %}
+{% load static %}
 
 {% block title %}Buscador de Libros{% endblock %}
 
 {% block content %}
+
 <div style="max-width: 800px; margin: 40px auto; padding: 20px;">
     
     <h1 style="text-align: center; color: var(--color-navbar);">📚 Buscador de Libros</h1>
@@ -57,4 +59,5 @@
         </div>
     {% endif %}
 </div>
+
 {% endblock %}
