--- a/tienda_artaud/templates/registration/_google_login.html
+++ b/tienda_artaud/templates/registration/_google_login.html
@@ -1,7 +1,7 @@
 {% load socialaccount %}
 
 <div style="margin-top: 20px; text-align: center;">
-  <h3 style="font-size: 1.2em; color: #000000;">También podés:</h3>
+  <h3 style="font-size: 1.2em; ">También podés:</h3>
 
   <a href="{% provider_login_url 'google' method='oauth2' %}" style="display: block; 
             width: 95%; 
