--- a/productos/templates/productos/catalogo.html
+++ b/productos/templates/productos/catalogo.html
@@ -91,10 +91,10 @@
 
             {% if query_actual or formato_seleccionado or condicion_seleccionada or edicion_seleccionada or genero_seleccionado %}
                 <div class="search-results-header" style="text-align: center; margin-bottom: 20px; padding-bottom: 10px; border-bottom: 1px solid #eee;">
-                    <h2 style="margin: 0; color: var(--color-texto-principal); font-size: 1.5em;">
-                        Resultados para: <span style="color: var(--color-navbar); font-weight: bold;">"{{ query_actual }}"</span>
+                    <h2 style="margin: 0; font-size: 1.5em;">
+                        Resultados para: <span style="font-weight: bold;">"{{ query_actual }}"</span>
                     </h2>
-                    <p style="margin: 5px 0 0 0; color: #777; font-size: 0.9em;">
+                    <p style="margin: 5px 0 0 0; font-size: 0.9em;">
                         Mostrando {{ page_obj.start_index }} - {{ page_obj.end_index }} de {{ page_obj.paginator.count }} resultados.
                     </p>
                 </div>
@@ -123,7 +123,7 @@
                 </div>
 
                 {% if not query_actual %}
-                    <p class="conteo-resultados" style="flex-grow: 1; text-align: left; font-size: 0.9em; color: #555; margin-left: 15px;">
+                    <p class="conteo-resultados">
                         Mostrando {{ page_obj.start_index }} - {{ page_obj.end_index }} de {{ page_obj.paginator.count }} productos.
                     </p>
                 {% endif %}
